--- a/package.json
+++ b/package.json
@@ -10,21 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@radix-ui/react-icons": "^1.3.2",
-    "@radix-ui/react-popover": "^1.1.13",
     "@radix-ui/react-slot": "^1.2.2",
     "@radix-ui/react-switch": "^1.2.4",
-    "@tailwindcss/vite": "^4.1.5",
+    "@tailwindcss/vite": "latest",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "debounce": "^2.2.0",
-    "lucide-react": "^0.508.0",
+    "lucide-react": "^0.511.0",
     "react": "^19.1.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.1.0",
-    "tailwind-merge": "^3.2.0",
-    "tailwindcss": "^4.1.5"
+    "tailwind-merge": "^3.3.0",
+    "tailwindcss": "latest"
   },
   "devDependencies": {
     "@eslint/js": "^9.26.0",
@@ -37,7 +35,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.1.0",
-    "tw-animate-css": "^1.2.9",
+    "tw-animate-css": "^1.3.0",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.32.0",
     "vite": "^6.3.5"
