--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "debounce": "^2.2.0",
+    "effect": "^3.15.2",
+    "immer": "^10.1.1",
     "lucide-react": "^0.511.0",
     "react": "^19.1.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.1.0",
     "tailwind-merge": "^3.3.0",
-    "tailwindcss": "latest"
+    "tailwindcss": "latest",
+    "zustand": "^5.0.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.26.0",
