--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^19.1.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.1.0",
+    "scrollyfills": "^1.0.3",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "latest",
     "zustand": "^5.0.4"
