CICD: fix workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,14 +3,13 @@ name: Build and Deploy React App
 on:
   push:
     branches:
-      - main
+      - master
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
-
-    env:
-      PUBLIC_URL: ${{ secrets.PUBLIC_URL }}
+    outputs:
+      dist-path: ${{ steps.upload.outputs.artifact-path }}
 
     steps:
       - name: Checkout code
@@ -29,6 +28,36 @@ jobs:
 
       - name: Build React app
         run: npm run build
+
+      - name: Upload dist as artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: react-dist
+          path: |
+            dist
+            nginx.conf.template
+
+  docker-and-deploy:
+    needs: build
+    runs-on: ubuntu-latest
+
+    env:
+      PUBLIC_URL: ${{ secrets.PUBLIC_URL }}
+
+    steps:
+      - name: Checkout code (for Dockerfile)
+        uses: actions/checkout@v4
+
+      - name: Download dist
+        uses: actions/download-artifact@v4
+        with:
+          name: react-dist
+          path: ./dist-artifact
+
+      - name: Copy dist to build context
+        run: |
+          cp -r ./dist-artifact/dist ./dist
+          cp ./dist-artifact/nginx.conf.template ./nginx.conf.template
 
       - name: Set up Docker
         uses: docker/setup-buildx-action@v3
