--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,6 +33,9 @@ jobs:
       - name: Set up Docker
         uses: docker/setup-buildx-action@v3
 
+      - name: Verify dist exists
+        run: ls -la && ls -la dist
+
       - name: Build Docker image
         run: |
           docker build \
