--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.4",
+    "@radix-ui/react-toggle": "^1.1.10",
     "@tailwindcss/vite": "latest",
     "@tanstack/react-query": "^5.89.0",
     "@telegram-apps/sdk-react": "^3.3.6",
