--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-menubar": "^1.1.16",
+    "@radix-ui/react-radio-group": "^1.3.8",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
@@ -30,11 +32,13 @@
     "effect": "^3.15.2",
     "immer": "^10.1.1",
     "lucide-react": "^0.511.0",
+    "next-themes": "^0.4.6",
     "react": "^19.2.0",
     "react-day-picker": "^9.9.0",
     "react-dom": "^19.2.0",
     "react-router": "^7.9.1",
     "scrollyfills": "^1.0.3",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "latest",
     "vaul": "^1.1.2",
