--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@tailwindcss/vite": "latest",
     "@tanstack/react-query": "^5.89.0",
-    "@telegram-apps/sdk-react": "^3.3.6",
+    "@tma.js/sdk-react": "^3.0.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
