--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@tailwindcss/vite": "latest",
     "@tanstack/react-query": "^5.89.0",
     "@tma.js/sdk-react": "^3.0.8",
+    "@vitejs/plugin-react": "^5.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
