--- a/package.json
+++ b/package.json
@@ -14,51 +14,52 @@
     "@radix-ui/react-context-menu": "^2.2.16",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-icons": "^1.3.2",
-    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-menubar": "^1.1.16",
     "@radix-ui/react-radio-group": "^1.3.8",
     "@radix-ui/react-scroll-area": "^1.2.10",
-    "@radix-ui/react-separator": "^1.1.7",
-    "@radix-ui/react-slot": "^1.2.3",
-    "@radix-ui/react-switch": "^1.2.4",
+    "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@tailwindcss/vite": "latest",
-    "@tanstack/react-query": "^5.89.0",
-    "@tma.js/sdk-react": "^3.0.8",
-    "@vitejs/plugin-react": "^5.1.0",
+    "@tanstack/react-query": "^5.90.19",
+    "@tma.js/sdk-react": "^3.0.15",
+    "@vitejs/plugin-react": "^5.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "effect": "^3.15.2",
-    "immer": "^10.1.1",
-    "lucide-react": "^0.511.0",
+    "effect": "^3.19.14",
+    "immer": "^11.1.3",
+    "lucide-react": "^0.562.0",
     "next-themes": "^0.4.6",
-    "react": "^19.2.0",
-    "react-day-picker": "^9.9.0",
-    "react-dom": "^19.2.0",
-    "react-router": "^7.9.1",
-    "scrollyfills": "^1.0.3",
+    "react": "^19.2.3",
+    "react-day-picker": "^9.13.0",
+    "react-dom": "^19.2.3",
+    "react-router": "^7.12.0",
+    "scrollyfills": "^1.0.4",
     "sonner": "^2.0.7",
-    "tailwind-merge": "^3.3.0",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss": "latest",
     "vaul": "^1.1.2",
-    "zustand": "^5.0.4"
+    "zustand": "^5.0.10"
   },
   "devDependencies": {
-    "@eslint/js": "^9.26.0",
-    "@types/node": "^22.15.17",
-    "@types/react": "^19.1.3",
-    "@types/react-dom": "^19.1.3",
-    "@vitejs/plugin-react-swc": "^3.9.0",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^9.26.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.1.0",
-    "tw-animate-css": "^1.3.0",
-    "typescript": "^5.8.3",
-    "typescript-eslint": "^8.32.0",
-    "vite": "^6.3.5"
+    "@eslint/js": "^9.39.2",
+    "@faker-js/faker": "^10.2.0",
+    "@types/node": "^25.0.9",
+    "@types/react": "^19.2.8",
+    "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react-swc": "^4.2.2",
+    "autoprefixer": "^10.4.23",
+    "eslint": "^9.39.2",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-react-refresh": "^0.4.26",
+    "globals": "^17.0.0",
+    "tw-animate-css": "^1.4.0",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.53.1",
+    "vite": "^7.3.1"
   }
 }
